fixed card overlap, adjusted flip function, styled buttons

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/*PRIMARY STYLING*/
+
 :root {
   --primary-green: #1dc38c;
   --primary-dark: #3c493f;
@@ -8,18 +10,30 @@
 *::before,
 *::after {
   box-sizing: border-box;
-  transition: 0.2s;
+  margin: 0;
 }
 
 body {
   font-family: "Roboto Condensed", sans-serif;
-  height: 100%;
-  margin: 0;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
   background-color: var(--primary-green);
   color: var(--primary-light);
 }
+
+button {
+  margin: 10px;
+  padding: 8px;
+  background-color: var(--primary-green);
+  border: 0.25px solid var(--primary-light);
+  color: var(--primary-light);
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: rgba(250, 250, 250, 0.1);
+}
+
+/*HEADER */
 
 a,
 button {
@@ -30,7 +44,7 @@ button {
 }
 
 .header {
-  margin: 0;
+  padding: 20px 10px;
   display: flex;
   justify-content: space-between;
   background-color: var(--primary-light);
@@ -42,8 +56,9 @@ button {
 
 .header .mainTitle {
   font-size: 60px;
-  margin-left: 10px;
 }
+
+/*LIGHT/DARK MODE TOGGLE FEATURE*/
 
 .checkbox {
   display: none;
@@ -58,8 +73,8 @@ button {
   height: 25px;
   position: relative;
   display: block;
-  background-color: #e5d7d7;
-  box-shadow: inset 0px 5px 15px #1dc38c, inset 0px -5px 15px #f1dede;
+  background-color: rgb(233, 228, 228);
+  box-shadow: inset 0px 5px 15px #1dc38c, inset 0px -5px 15px white;
   cursor: pointer;
   border-radius: 200px;
 }
@@ -69,10 +84,6 @@ button {
   font-size: 18px;
 }
 
-/* #switch-button .fa-sun {
-  padding-right: 15px;
-} */
-
 #switch-button:after {
   content: "";
   width: 20px;
@@ -80,14 +91,12 @@ button {
   position: absolute;
   top: 10px;
   left: 10px;
-  background: linear-gradient(
-    180deg,
-    var(--primary-light),
-    var(--primary-green)
-  );
+  background: linear-gradient(180deg, white, var(--primary-green));
   border-radius: 180px;
   box-shadow: 0px 5px 10px var(--primary-dark);
 }
+
+/*FOOTER */
 
 .footer {
   position: fixed;
@@ -97,45 +106,37 @@ button {
   justify-content: space-between;
   background-color: var(--primary-light);
   color: var(--primary-dark);
+  padding: 10px;
 }
 
-.footer > p {
-  padding: 0 10px;
-}
+/*LANDING COMPONENT HEADING ELEMENT*/
 
-.title-container {
+.title-container,
+.page-heading {
   text-align: center;
+  margin-left: 10px;
   margin-bottom: 20px;
-  color: var(--primary-dark);
+  color: var(--primary-light);
   font-size: large;
 }
+
+.page-heading {
+  font-size: 36px;
+  padding: 0;
+  margin-block-start: 0;
+}
+
+/*DECK INDEX*/
 
 .decks-container {
   padding-top: 2vh;
   display: flex;
-  gap: 30px;
   flex-direction: row;
   flex-wrap: wrap;
+  gap: 30px;
   justify-content: center;
   width: 100%;
   text-align: center;
-}
-
-.cards-container {
-  padding-top: 2vh;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  width: 90%;
-  text-align: center;
-}
-
-.basic-mode {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  flex-wrap: wrap;
 }
 
 .deck {
@@ -153,76 +154,84 @@ button {
   color: var(--primary-dark);
 }
 
-div .card-back,
-div .card-front {
-  width: 300px;
-  height: 200px;
-  margin: 5px;
+/*CARD SHOW*/
+
+.show-container {
+  width: 100%;
+  text-align: center;
+  margin: 0 auto;
 }
 
 .cards-container {
+  padding-top: 2vh;
   display: flex;
+  flex-direction: row;
+  justify-content: space-around;
   flex-wrap: wrap;
-  gap: 20px;
-  justify-content: center;
-  align-items: center;
-  min-height: 30vh;
-  padding: 0 20px;
 }
 
 .flashcard {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 30vh;
-  margin: auto;
-}
-
-.card {
-  border: 1px solid #ddd;
-  padding: 10px;
+  cursor: pointer;
   width: 300px;
   height: 200px;
-  margin: auto;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin: 15px;
 }
 
-button {
-  margin-top: 20px;
-  padding: 10px 20px;
-  background-color: #007bff;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.flashcard {
-  perspective: 1000px;
-}
-
-.card {
-  width: 200px;
-  height: 100px;
-  transition: transform 0.6s;
+.card-content {
+  height: 100%;
+  width: 100%;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  padding: 10px;
+  transition: transform 3s;
   transform-style: preserve-3d;
-  cursor: pointer;
+  border-radius: 8px;
+  background-color: var(--primary-light);
+  color: var(--primary-dark);
 }
 
-.card.flipped {
-  transform: rotateY(180deg);
+.flashcard:hover .card-content {
+  transform: rotateY(0.5turn);
 }
 
 .card-front,
 .card-back {
   position: absolute;
-  width: 100%;
-  height: 100%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   backface-visibility: hidden;
-  display: flex;
-  align-items: center;
+  transform-style: preserve-3d;
+  display: grid;
+  align-content: center;
+  text-align: center;
   justify-content: center;
 }
 
+.card-front {
+  transform: rotateY(0.5turn);
+  transform-style: preserve-3d;
+}
+
+.card-front::before {
+  content: "";
+  position: absolute;
+  transform: translateZ(3rem);
+}
+
+.card-question {
+  transform: translateZ(5rem);
+  order: 2;
+}
+
+.card-answer {
+  transform: translateZ(6rem);
+}
+
 .card-back {
-  transform: rotateY(180deg);
+  transform: rotateY(0.5turn);
 }
